Fix Comment alignment

--- a/client/stylesheets/globals/pages.import.less
+++ b/client/stylesheets/globals/pages.import.less
@@ -1087,3 +1087,6 @@ del {
   font-size: 85%;
   display: block;
 }
+.social-comment textarea.form-control{
+  height: 48px;
+}
